# EndGame_ucode

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  main  main.cpp  main.h  mygame
SDL2/cmake/: sdl2-config.cmake
resourse/libs/SDL/: Makefile  Makefile.rules  config.status  libtool  sdl2.pc
resourse/libs/SDL/include/: SDL_revision.h
resourse/libs/SDL_image/: .gitignore  Makefile  config.status  libtool  showanim  showimage
resourse/libs/SDL_image/.libs/: libSDL2_image-2.0.so.0.800.2  showanim  showimage
resourse/libs/SDL_image/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
resourse/libs/SDL_image/test/: Makefile
resourse/libs/SDL_ttf/: Makefile  config.status  glfont  libSDL2_ttf.la  libtool  showfont
resourse/libs/SDL_ttf/.deps/: glfont.Po  libSDL2_ttf_la-SDL_ttf.Plo  showfont.Po
resourse/libs/SDL_ttf/.libs/: glfont  libSDL2_ttf.lai  showfont
resourse/libs/SDL_ttf/autom4te.cache/: output.0  requests  traces.0
resourse/libs/harfbuzz/: CMakeLists.txt
resourse/libs/harfbuzz/src/: hb-config.hh  hb-ft.cc  libSDL2_ttf_la-hb-aat-layout.lo  libSDL2_ttf_la-hb-aat-map.lo  libSDL2_ttf_la-hb-blob.lo  libSDL2_ttf_la-hb-buffer-serialize.lo  libSDL2_ttf_la-hb-buffer-verify.lo  libSDL2_ttf_la-hb-buffer.lo  (+46 more)
src/: character.c  character.h  design.c  design.h  enemies.c  enemies.h  imageTool.c  imageTool.h  interface.c  interface.h  main.c  main.h  map.c  map.h  menu.c  menu.h  mygame  resourceTool.c  resourceTool.h  screen.c  screen.h  sounds.c  sounds.h  status.c  status.h
src/sounds/: sounds.c  sounds.h
(+159 files in other folders)
